Prefer Set.of to Collections.singleton